--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    
     "name": "vite_react_shadcn_ts",
     "private": true,
     "version": "0.0.0",
@@ -8,7 +9,8 @@
         "build": "vite build",
         "build:dev": "vite build --mode development",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "start": "node server.js"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
