--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "recharts": "^2.12.7",
         "sitemap": "^8.0.0",
         "sonner": "^1.5.0",
+        "swiper": "^12.0.2",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^0.9.3",
